--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ by Aniket Salgaonkar</p>
+    <p>Made by Aniket Salgaonkar</p>
   </div>
 </div>
 </body>
